# Booking_System

./: pyproject.toml
booking_system/: settings.py  urls.py
bookings/: admin.py  forms.py  models.py  urls.py  views.py
bookings/migrations/: 0001_initial.py  0002_booking_is_active.py  0003_remove_booking_is_active.py  0004_users_alter_booking_client_delete_client.py
bookings/static/bookings/: styles.css
bookings/templates/bookings/: about.html  base.html  booking.html  booking_success.html  login.html  news.html  register.html  service_booking.html  success.html
